# Wrapped-ICP

./: README.md  dfx.json
src/WICP-motoko/: storage.mo  token.mo
src/WICP-motoko/common/: ledgerHistory.mo  types.mo
src/ledger_history/: Cargo.toml  ledger_history.did  lib.rs
